--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ Icon?
 ehthumbs.db
 Thumbs.db
 2D RPG/Assets/Stat.meta
+2D RPG/Assembly-CSharp.csproj
+2D RPG/Assembly-CSharp-Editor.csproj
+2D RPG/.vscode/settings.json
+2D RPG/2D RPG.sln
