--- a/2D RPG/Assembly-CSharp.csproj
+++ b/2D RPG/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CameraController.cs" />
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\CameraFollow.cs" />
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\CollectableBounce.cs" />
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\Door.cs" />
@@ -61,6 +62,7 @@
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\Tile.cs" />
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\TimedAnimations.cs" />
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\Trigger.cs" />
+     <Compile Include="Assets\InventoryController.cs" />
      <Compile Include="Assets\Josh Test\ControlScripts\ArcherControl.cs" />
      <Compile Include="Assets\Josh Test\ControlScripts\Battleflow.cs" />
      <Compile Include="Assets\Josh Test\ControlScripts\DamTextControl.cs" />
