--- a/2D RPG/.gitignore
+++ b/2D RPG/.gitignore
@@ -3,6 +3,7 @@
 ###
 [Aa]ssets/AssetStoreTools*
 [Bb]uild/
+[Bb]uilds/
 [Ll]ibrary/
 [Ll]ocal[Cc]ache/
 [Oo]bj/
@@ -26,7 +27,20 @@ sysinfo.txt
 *.user
 *.userprefs
 *.pidb
+*.tmp
 .DS_Store
+.consulo/
+
+# Unity 3D generated meta files
+*.pidb.meta
+*.pdb.meta
+
+# Unity3D Generated File on Crash Reports
+sysinfo.txt
+
+# Builds
+*.apl
+*.unitypackage
 
 ###
 # OS generated
