--- a/2D RPG/Assembly-CSharp.csproj
+++ b/2D RPG/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
      <Compile Include="Assets\Josh Test\ControlScripts\WarriorControl.cs" />
      <Compile Include="Assets\Josh Test\ControlScripts\WizardControl.cs" />
      <Compile Include="Assets\Josh Test\Josh Test Script.cs" />
+     <Compile Include="Assets\Josh Test\StaticValues.cs" />
      <Compile Include="Assets\Rotator.cs" />
      <Compile Include="Assets\Scripts\ButtonHandler.cs" />
      <Compile Include="Assets\Scripts\Character Classes\BaseCharacterClass.cs" />
